--- a/audit-log-service/src/main/resources/application.yaml
+++ b/audit-log-service/src/main/resources/application.yaml
@@ -3,27 +3,5 @@ server:
 spring:
   application:
     name: audit-log-service
-  datasource:
-    url: jdbc:clickhouse://localhost:8123/audits?compress=0
-    username: clickhouse
-    password: 1234
-    driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
-#    hikari:
-#      maximum-pool-size: 10
-#      connection-timeout: 30000
-#      idle-timeout: 600000
-#      max-lifetime: 1800000
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: rab
-    password: 1234
-#    virtual-host: /
-#  data:
-#    jdbc:
-#      repositories:
-#        enabled: false
-
-audit_booking:
-  queue:
-    name: booking-events
+  config:
+    import: optional:configserver:http://localhost:8888
