--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -61,6 +61,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>config-server</finalName>
     </build>
-
 </project>
