--- a/audit-log-service/src/main/resources/application.yaml
+++ b/audit-log-service/src/main/resources/application.yaml
@@ -3,3 +3,20 @@ server:
 spring:
   application:
     name: audit-log-service
+  cloud:
+    config:
+      fail-fast: false
+  config:
+    import: optional:configserver:http://localhost:8888
+
+  datasource:
+    url: jdbc:clickhouse://localhost:8123/audits?compress=0
+    username: clickhouse
+    password: 1234
+    driver-class-name: com.clickhouse.jdbc.ClickHouseDriver
+
+  flyway:
+    url: jdbc:clickhouse://localhost:8123/audits?compress=0
+    user: clickhouse
+    password: 1234
+    locations: classpath:db/migration
