--- a/main-service/src/main/resources/application.yaml
+++ b/main-service/src/main/resources/application.yaml
@@ -18,3 +18,6 @@ spring:
       fail-fast: false
   config:
     import: "optional:configserver:http://localhost:8888"
+  graphql:
+    graphiql:
+      enabled: true
